fix httpd virtualhost problem

--- a/etc/httpd/conf.d/ci.idevops.net.conf
+++ b/etc/httpd/conf.d/ci.idevops.net.conf
@@ -1,4 +1,4 @@
-<VirtualHost ci.idevops.net:33080>
+<VirtualHost *:33080>
         ServerAdmin bryan@idevops.net
         ServerName ci.idevops.net:33080
         ServerSignature Off
@@ -9,8 +9,8 @@
         <IfModule mod_proxy.c>
             ProxyVia On
             ProxyRequests Off
-            ProxyPass / http://www.idevops.net:8080/
-            ProxyPassReverse / http://www.idevops.net:8080/
+            ProxyPass / http://ci.idevops.net:8080/
+            ProxyPassReverse / http://ci.idevops.net:8080/
             ProxyPreserveHost on
             <Proxy *>
                 Options FollowSymLinks MultiViews
