web site update

--- a/etc/httpd/conf.d/ci.idevops.net.conf
+++ b/etc/httpd/conf.d/ci.idevops.net.conf
@@ -9,7 +9,7 @@
         <IfModule mod_proxy.c>
             ProxyVia On
             ProxyRequests Off
-            ProxyPass / http://ci.idevops.net:8080/
+            ProxyPass / http://ci.idevops.net:8080/ nocanon
             ProxyPassReverse / http://ci.idevops.net:8080/
             ProxyPreserveHost on
             <Proxy *>
