--- a/etc/httpd/conf.d/www.idevops.net.conf
+++ b/etc/httpd/conf.d/www.idevops.net.conf
@@ -1,6 +1,10 @@
 <VirtualHost *:33080>
 DocumentRoot /var/www/html
 ServerName www.idevops.net:33080
+
+ErrorDocument 500 "The server made a boo boo."
+ErrorDocument 404 /missing.html
+
 # Other directives here
 <Directory "/var/www">
     AllowOverride None
