--- a/etc/httpd/conf.d/chef.idevops.net.conf
+++ b/etc/httpd/conf.d/chef.idevops.net.conf
@@ -1,10 +1,15 @@
-<VirtualHost *:33080>
+<VirtualHost *:33443>
         ServerAdmin bryan@idevops.net
-        ServerName chef.idevops.net:33080
+        ServerName chef.idevops.net:33443
         ServerSignature Off
         CustomLog /var/log/httpd/chef.idevops.net_access.log combined
         ErrorLog /var/log/httpd/chef.idevops.net_error.log
         ErrorLog syslog:local2
+
+        SSLEngine on
+        SSLCipherSuite RC4-SHA:RC4-MD5:RC4:RSA:HIGH:MEDIUM:!LOW:!kEDH:!aNULL:!ADH:!eNULL:!EXP:!SSLv2:!SEED:!CAMELLIA:!PSK
+        SSLCertificateFile "/etc/httpd/ca/ldap.crt"
+        SSLCertificateKeyFile "/etc/httpd/ca/ldap.key"
 
         <IfModule mod_proxy.c>
             ProxyVia On
