--- a/etc/httpd/conf/httpd.conf
+++ b/etc/httpd/conf/httpd.conf
@@ -40,7 +40,7 @@ ServerRoot "/etc/httpd"
 #
 #Listen 12.34.56.78:80
 Listen 33080
-Listen 33443
+Listen 33443 https
 #
 # Dynamic Shared Object (DSO) Support
 #
