--- a/etc/httpd/conf.d/chef.idevops.net.conf
+++ b/etc/httpd/conf.d/chef.idevops.net.conf
@@ -7,9 +7,17 @@
         ErrorLog syslog:local2
 
         SSLEngine on
+        SSLProtocol all -SSLv2
         SSLCipherSuite RC4-SHA:RC4-MD5:RC4:RSA:HIGH:MEDIUM:!LOW:!kEDH:!aNULL:!ADH:!eNULL:!EXP:!SSLv2:!SEED:!CAMELLIA:!PSK
         SSLCertificateFile "/etc/httpd/ca/ldap.crt"
         SSLCertificateKeyFile "/etc/httpd/ca/ldap.key"
+
+        SSLPassPhraseDialog exec:/usr/libexec/httpd-ssl-pass-dialog
+        SSLSessionCache         shmcb:/run/httpd/sslcache(512000)
+        SSLSessionCacheTimeout  300
+        SSLRandomSeed startup file:/dev/urandom  256
+        SSLRandomSeed connect builtin
+        SSLCryptoDevice builtin
 
         <IfModule mod_proxy.c>
             ProxyVia On
