--- a/etc/httpd/conf.d/chef.idevops.net.conf
+++ b/etc/httpd/conf.d/chef.idevops.net.conf
@@ -6,12 +6,14 @@
         ErrorLog /var/log/httpd/chef.idevops.net_error.log
         ErrorLog syslog:local2
 
+        SSLProxyEngine on
         SSLEngine on
         SSLProtocol all -SSLv2
         SSLCipherSuite RC4-SHA:RC4-MD5:RC4:RSA:HIGH:MEDIUM:!LOW:!kEDH:!aNULL:!ADH:!eNULL:!EXP:!SSLv2:!SEED:!CAMELLIA:!PSK
         SSLCertificateFile "/etc/httpd/ca/ldap.crt"
         SSLCertificateKeyFile "/etc/httpd/ca/ldap.key"
-
+        SSLProxyCACertificateFile /etc/pki/tls/certs/localhost.crt
+        SSLProxyCACertificatePath /etc/pki/tls/certs
         <IfModule mod_proxy.c>
             ProxyVia On
             ProxyRequests Off
