--- a/etc/httpd/conf.d/review.idevops.net.conf
+++ b/etc/httpd/conf.d/review.idevops.net.conf
@@ -9,6 +9,7 @@
         <IfModule mod_proxy.c>
             ProxyVia On
             ProxyRequests Off
+            AllowEncodedSlashes On
             ProxyPass / http://review.idevops.net:8080/ nocanon
             ProxyPassReverse / http://review.idevops.net:8080/
             ProxyPreserveHost on
