--- a/etc/httpd/conf.d/ldap.idevops.net.conf
+++ b/etc/httpd/conf.d/ldap.idevops.net.conf
@@ -1,17 +1,16 @@
-<VirtualHost *:33080>
-        ServerAdmin devid.geng@idevops.net
-        ServerName zuul.idevops.net:33080
+<VirtualHost *:4403>
+        ServerAdmin bryan@idevops.net
+        ServerName ldap.idevops.net:4403
         ServerSignature Off
-        CustomLog /var/log/httpd/zuul.idevops.net_access.log combined
-        ErrorLog /var/log/httpd/zuul.idevops.net_error.log
+        CustomLog /var/log/httpd/ldap.idevops.net_access.log combined
+        ErrorLog /var/log/httpd/ldap.idevops.net_error.log
         ErrorLog syslog:local2
 
         <IfModule mod_proxy.c>
             ProxyVia On
             ProxyRequests Off
-            AllowEncodedSlashes On
-            ProxyPass / http://zuul.idevops.net:8880/ nocanon
-            ProxyPassReverse / http://zuul.idevops.net:8880/
+            ProxyPass / http://ldap.idevops.net:4403/ nocanon
+            ProxyPassReverse / http://ldap.idevops.net:4403/
             ProxyPreserveHost on
             <Proxy *>
                 Options FollowSymLinks MultiViews
@@ -21,4 +20,3 @@
             </Proxy>
         </IfModule>
 </VirtualHost>
-
