Move to use new website.

--- a/etc/httpd/conf.d/www.idevops.net.conf
+++ b/etc/httpd/conf.d/www.idevops.net.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:33080>
-DocumentRoot /var/www/html
+DocumentRoot /var/www/website
 ServerName www.idevops.net:33080
 
 ErrorDocument 500 "The server made a boo boo."
